+ Added React-stickynode + Sticky Categories on MetaCategories pages + Fixed margin-left for metaIcons {Browsing UX on Mobile browser fine, App fine, Desktop TBD)

--- a/src/templates/BlogIndex.css
+++ b/src/templates/BlogIndex.css
@@ -150,6 +150,10 @@ ul li{
     margin-left: -10px;
   }
 
+  span.metaIcon{
+    margin-left: -10px;
+  }
+
   .SecondNav {
     background-color: white;
     overflow: hidden;
